# llm-robot

./: .gitignore  README.md  open_robot.py  pyproject.toml  requirements.txt
robots/small/: __init__.py  motor_control.py  test_motor.py
src/client/: README.md  api_key.txt  claude_interface.py  constants.py  gamepad.py  llm_interface.py  llm_tools.py  rerun_utils.py  robot_client.py  teleop.py  test_gemini_connection.py  test_robot_llm.py
src/client/actions/DriveForDuration/: drive.py  turn.py
src/client/monocular_odometry/: README.md  monocular_odom.py
src/client/stereo_odometry/: StereoOdomO1Pro.py  VisualOdometry.py  __init__.py  bundle_adjustment_solution.py  feature_detection_matching.py  rerun_debugging_utils.py  stereo_calibration.npz  stereo_rectification.py  test_read_calibration.py  visualize_with_rerun.py
src/client/stereo_odometry/bad_llm_code_archive/: VisualOdometry.py
src/client/stereo_odometry/calib/: collect_images.py  stereo_calibration.py  test_read_calibration.py
src/llm_robot/: __init__.py  cli.py
src/llm_robot/models/: __init__.py  components.py  geometry2d.py  keys.py
src/robot/: constants.py
