[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-robot"
version = "0.1.0"
authors = [
    { name = "Ben Caunt" },
]
description = "An opinionated robotics framework built on zenoh"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "eclipse-zenoh",
    "click>=8.0.0",
    "smbus2>=0.4.3",
]

[project.scripts]
llm-robot = "llm_robot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_robot"] 